[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
structopt = "0.3"
once_cell = "1.18"
rangetools = "0.1"
tailcall = "0.1"
num = "0.4"

[dev-dependencies]
rstest = "0.18"
proptest = "1.4"
rand = "0.8"